src/test/ui/issue-19734.stderr
error: cannot find macro `undef!` in this scope
  --> $DIR/issue-19734.rs:16:5
   |
LL |     undef!();
   |     ^^^^^

error: aborting due to previous error

